# androidcrypt-libaes

./: CHANGELOG.md  CMakeLists.txt
cmake/: have_cpuid.cmake
dependencies/: CMakeLists.txt
include/terra/crypto/cipher/: aes.h  aes_key_wrap.h
src/: CMakeLists.txt  aes.cpp  aes_intel.cpp  aes_intel.h  aes_key_wrap.cpp  aes_tables.h  aes_unavailable.h  aes_universal.cpp  aes_universal.h  aes_utilities.h  cpu_check.cpp  cpu_check.h  intel_intrinsics.h
test/: CMakeLists.txt
test/aes/: CMakeLists.txt  test_aes.cpp
test/aes_intel/: CMakeLists.txt  test_aes_intel.cpp
test/aes_key_wrap/: CMakeLists.txt  test_aes_key_wrap.cpp
test/aes_universal/: CMakeLists.txt  test_aes_universal.cpp
